# pipeline

./: ARCHITECTURE.md  CHANGELOG.md  GITHUB_TOPICS.md  LICENSE  PROGRAM.md  README.md  README_SEO.md  USAGE.md  pyproject.toml  requirements.txt
benchmarks/: episodic_memory_benchmark.py  episodic_memory_benchmark_results.json  procedural_memory_benchmark.py  semantic_memory_benchmark.py  working_memory_benchmark.py
designs/: agent-memory-four-layer-architecture.md  episodic-memory-tech-selection.md  procedural-memory-design.md  semantic-memory-design.md
docs/: 2026-03-14-pilot-rct-protocol.md  2026-03-17-ethics-application-form.md  2026-03-17-ethics-consent-form.md  2026-03-17-ethics-data-privacy.md  2026-03-17-ethics-risk-assessment.md  DASHSCOPE_API_KEY-reminder-email.md  DASHSCOPE_API_KEY-reminder.md  async_api_research.md  clinical_data_collection_protocol.md  community_contact_script_final.md  ethics-committee-submission-email.md  geo-iterations-19-33-summary.md  geo-iterations-summary.md  informed_consent_english.md  llm-as-judge-implementation-plan.md  llm_as_judge_architecture.md  metamemory_pilot_baseline_package.md  metamemory_pilot_recruitment_package.md  metamemory_pilot_recruitment_timeline.md  metamemory_recruitment_poster.md  metamemory_screening_questionnaire.md  metamemory_screening_questionnaire_v1.1.md  narrative_scorer_academic_benchmarks.md  paper-promotion-drafts.md  pilot_baseline_assessment_package.md  pilot_data_collection_forms.md  pilot_participant_tracking_sheet.md  pilot_questionnaire_deployment_guide.md  pr-11-followup-draft.md  recruitment_methods_digital_health_review.md  v0.7-llm-integration-guide.md  v07-cost-analysis.md  v07-release-checklist.md  wrapper-implementation-plan.md
examples/: demo_pipeline.py
src/: __init__.py  assessor.py  emotional_arousal_detector.py  events.py  narrative_scorer_v0.4.py  (+2 more)
(+22 files in other folders)
